// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Curriculum challenge page Should render appropriately when no challenges are passed to component 1`] = `
<div>
  <h1>
    No Challenges for this lesson
  </h1>
</div>
`;

exports[`Curriculum challenge page Should render challenge material page differently when user has passed all their challenges 1`] = `
<div>
  <div
    class="row challenge-display"
  >
    <div
      class="col-4"
    >
      <div
        class="card mb-2 challenge-title-card challenge-title-card--done"
        data-testid="challenge-title"
      >
        <div
          class="card-body d-flex justify-content-between"
        >
          <div>
            0. Greater than 5
          </div>
          <img
            height="25px"
            src="/curriculumAssets/icons/checkmark.svg"
            width="25px"
          />
        </div>
      </div>
      <div
        class="card mb-2 challenge-title-card challenge-title-card--done"
        data-testid="challenge-title"
      >
        <div
          class="card-body d-flex justify-content-between"
        >
          <div>
            1. Sum of 2 Numbers
          </div>
          <img
            height="25px"
            src="/curriculumAssets/icons/checkmark.svg"
            width="25px"
          />
        </div>
      </div>
      <div
        class="card mb-2 challenge-title-card challenge-title-card--active challenge-title-card--done"
        data-testid="challenge-title"
      >
        <div
          class="card-body d-flex justify-content-between"
        >
          <div>
            3. Challenges Completed!
          </div>
          <img
            height="25px"
            src="/curriculumAssets/icons/checkmark.svg"
            width="25px"
          />
        </div>
      </div>
    </div>
    <div
      class="col-8"
    >
      <div
        class="card text-center shadow-sm"
      >
        <div
          class="card-body"
        >
          <img
            class="mt-3"
            src="/curriculumAssets/icons/icon-challenge-complete.jpg"
          />
          <h4
            class="card-title mt-2"
          >
            Congratulations!
          </h4>
          <p
            class="success-message"
          >
            You have successfully completed all challenges
          </p>
          <p
            class="review-message"
          >
            You can help your peers by
            <a
              class="font-weight-bold mx-1"
              href="https://chat.c0d3.com/c0d3/channels/js0-foundations"
            >
              answering questions
            </a>
            they have in the lesson and
            <a
              class="font-weight-bold mx-1"
              href="https:/c0d3.com/teacher/5"
            >
              review challenge submissions.
            </a>
          </p>
        </div>
        <div
          class="card-footer d-flex bg-primary"
        >
          <p
            class="text-white mr-3 mt-2"
          >
            You can show your appreciation to the user that helped you the most by giving them a star
          </p>
          <button
            class="btn btn-light text-primary font-weight-bold ml-auto"
          >
            Give Star
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Curriculum challenge page Should render clicked challenge within challenge question 1`] = `
<div>
  <div
    class="row challenge-display"
  >
    <div
      class="col-4"
    >
      <div
        class="card mb-2 challenge-title-card shadow-sm border-0"
        data-testid="challenge-title"
      >
        <div
          class="card-body d-flex justify-content-between"
        >
          <div>
            0. Greater than 5
          </div>
        </div>
      </div>
      <div
        class="card mb-2 challenge-title-card challenge-title-card--active shadow-sm border-0"
        data-testid="challenge-title"
      >
        <div
          class="card-body d-flex justify-content-between"
        >
          <div>
            1. Sum of 2 Numbers
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-8"
    >
      <div
        class="card shadow-sm border-0"
      >
        <div
          class="card-body challenge-question"
        >
          <h1
            class="card-title"
            data-testid="challenge-question-title"
          >
            Sum of 2 Numbers
          </h1>
          <div
            class="bg-light p-3 mt-3"
            data-testid="challenge-question-description"
          >
            <span>
              Write a function that takes in 2 numbers and returns their sum.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Curriculum challenge page Should render first challenge by default when user has no submissions 1`] = `
<div>
  <div
    class="row challenge-display"
  >
    <div
      class="col-4"
    >
      <div
        class="card mb-2 challenge-title-card challenge-title-card--active shadow-sm border-0"
        data-testid="challenge-title"
      >
        <div
          class="card-body d-flex justify-content-between"
        >
          <div>
            0. Greater than 5
          </div>
        </div>
      </div>
      <div
        class="card mb-2 challenge-title-card shadow-sm border-0"
        data-testid="challenge-title"
      >
        <div
          class="card-body d-flex justify-content-between"
        >
          <div>
            1. Sum of 2 Numbers
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-8"
    >
      <div
        class="card shadow-sm border-0"
      >
        <div
          class="card-body challenge-question"
        >
          <h1
            class="card-title"
            data-testid="challenge-question-title"
          >
            Greater than 5
          </h1>
          <div
            class="bg-light p-3 mt-3"
            data-testid="challenge-question-description"
          >
            <span>
              Write a function that takes in a number and returns true if that number is greater than 5. Otherwise, return false.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Curriculum challenge page Should render first challenge that is not passed when user has submissions 1`] = `
<div>
  <div
    class="row challenge-display"
  >
    <div
      class="col-4"
    >
      <div
        class="card mb-2 challenge-title-card challenge-title-card--active shadow-sm border-0"
        data-testid="challenge-title"
      >
        <div
          class="card-body d-flex justify-content-between"
        >
          <div>
            0. Greater than 5
          </div>
          <img
            height="25px"
            src="/curriculumAssets/icons/pending.svg"
            width="25px"
          />
        </div>
      </div>
      <div
        class="card mb-2 challenge-title-card shadow-sm border-0"
        data-testid="challenge-title"
      >
        <div
          class="card-body d-flex justify-content-between"
        >
          <div>
            1. Sum of 2 Numbers
          </div>
          <img
            height="25px"
            src="/curriculumAssets/icons/rejected.svg"
            width="25px"
          />
        </div>
      </div>
    </div>
    <div
      class="col-8"
    >
      <div
        class="card shadow-sm border-0"
      >
        <div
          class="card-body challenge-question"
        >
          <h1
            class="card-title"
            data-testid="challenge-question-title"
          >
            Greater than 5
          </h1>
          <div
            class="bg-light p-3 mt-3"
            data-testid="challenge-question-description"
          >
            <span>
              Write a function that takes in a number and returns true if that number is greater than 5. Otherwise, return false.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
